admission/ValidatingAdmissionPolicy/policies/windows-hostprocess/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-hostprocess-initcontainers
  annotations:
    kubeapt.io/uuid: "40d17131-f0d2-4bde-804d-dff8036e221c"
spec:
  hostNetwork: true
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      windowsOptions:
        hostProcess: true
  os:
    name: windows
